src/components/gallery/ShowcaseTag/styles.module.css
/**
* Copyright (c) Microsoft Corporation. All rights reserved.
* Licensed under the MIT License.
 */

.tagContainer {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  overflow: hidden;
  width: 100%;
}

.cardTag {
  margin-right: 4px;
  flex-shrink: 0;
}

.cardPanelTag {
  height: 20px;
  align-content: center;
  border: 1px solid #b4d6fa !important;
  padding: 0 5px;
  margin-top: 3px;
  font-size: 10px;
  min-width: 0px;
  color: #115ea3 !important;
  font-weight: 500;
  border-radius: 100px;
  background: #ebf3fc !important;
  display: flex;
  align-items: center;
}

.cardPanelColoredTag {
  margin-right: 8px;
  margin-bottom: 4px;
  flex-shrink: 0;
}

